# ActixRESTServer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  state.rs
src/handlers/: auth.rs  btc_handler.rs  mod.rs  product_handler.rs  send_bitcoin.rs  user.rs  user_handler.rs  wallet_handler.rs
src/models/: auth.rs  blockchain.rs  mod.rs  product.rs  role.rs  user.rs  wallet.rs
src/routes/: auth.rs  btc_routes.rs  mod.rs  product_routes.rs  users.rs  wallet_routes.rs
src/utils/: hash.rs  jwt.rs  mod.rs  schnorr.rs  signatures.rs
