[package]
name = "Task1"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }  

env_logger = "0.10"
log = "0.4"
