[package]
name = "Task1"
version = "0.1.65"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
validator = { version = "0.20", features = ["derive"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }

env_logger = "0.11.8"
log = "0.4.27"

argon2 = "0.6.0-rc.0"
rand = "0.9.1"
rand_core = "0.9.3"  # Для генерации соли
